# pilea

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
input/content/posts/: test_post copy 6.md
input/templates/: page.html
new/input/static/: main.css
new/input/templates/: archive.html  default.html  index.html  post.html
pilea/: __main__.py  build_controller.py  cli.py  post.py  state.py
pilea/input/: config.yaml
pilea/input/content/pages/: about.md
pilea/input/content/posts/: post.md
pilea/input/templates/: archive.html  index.html
pilea/resources/: photo.py  post.py  resource.py
